# Entropy

./: .gitignore  LICENSE.md  README.md
Scripts/: code_civil_dl.py
src/: CMakeLists.txt  construct.cpp  construct.h  def.h  entropy.cpp  entropy.h  gen.cpp  gen.h  main.cpp  poem.txt
src/Scripts/: adapt.py  retrieve.py  script.py
src/Storing/: simple_tree.cpp  simple_tree.h  store.cpp  store.h  store_map.cpp  store_tree.cpp  store_tree.h
src/Testing/: test.cpp  test.h
